# adaptive

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .mailmap  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CLEANUP.md  Cargo.toml  Dockerfile  LICENSE  Learner-parallel-plotter.ipynb  Learner-parallel.ipynb  Learner-timing.ipynb  Learner-widgets.ipynb  README.md  README.rst  RELEASE.md  REPORT.md  a.txt  adalearner.py  algorithm_4.py  animations.ipynb  azure-pipelines.yml  check_whitespace  coeffs.py  cquad.py  environment.yml  example-notebook.ipynb  ipynb_filter.py  learner.ipynb  learner.py  learner1D.py  learner_1d.py  noxfile.py  proof-of-concept-learner.ipynb  pyproject.toml  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: auto-changelog-generator.yml  automerge.yml  coverage.yml  nox.yml  pythonpublish.yml  tox.yml  typeguard.yml
adaptive/: __init__.py  _adaptive_version.py  _static_version.py  _types.py  _version.py  domain.py  learner.py  notebook_integration.py  priority_queue.py  runner.py  tools.py  types.py  utils.py  version.py
adaptive/learner/: __init__.py  average1D.py  average2D.py  average_learner.py  average_learner1D.py  average_mixin.py  averagelearner1D.py  balancing_learner.py  base_learner.py  data_saver.py  fasthelper.pyx  integrator_coeffs.py  integrator_learner.py  learner1D.py  learner2D.py  learnerND.py  meta_data_saver.py  new_learnerND.py  sequence_learner.py  skopt_learner.py  triangulation.c  triangulation.py  triangulation_backend.py  triangulation_rust.py  utils.py
adaptive/tests/: algorithm_4.py  domain_utils.py  flaky_utils.py  test_average_learner.py  test_average_learner1d.py  test_balancing_learner.py  test_cquad.py  test_domain.py  test_leaner.py  test_learner.py  test_learner1d.py  test_learnernd.py  test_learners.py  test_notebook_integration.py  test_pickling.py  test_priority_queue.py  test_runner.py  test_sequence_learner.py  test_skopt_learner.py  test_triangulation.py
adaptive/tests/data/: issue_470_boundaries.json  issue_470_sampled_points.csv
adaptive/tests/unit/: test_learnernd.py  test_learnernd_integration.py  test_triangulation.py  test_triangulation_backend.py
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: benchmarks.py
docs/: .gitignore  Makefile  environment.yml  logo.py  logo_animated.py
docs/source/: algorithms_and_examples.md  algorithms_and_examples.rst  benchmarks.md  conf.py  docs.md  docs.rst  faq.md  faq.rst  gallery.md  gallery.rst  implemented-algorithms.rst  index.md  index.rst  logo.md  logo.rst  rest_of_readme.rst
docs/source/_static/: custom.css  jquery.js
docs/source/_static/js/: theme.js
docs/source/_templates/: base.html  layout.html
docs/source/reference/: adaptive.learner.average2D.rst  adaptive.learner.average_learner.md  adaptive.learner.average_learner.rst  adaptive.learner.average_learner1D.md  adaptive.learner.average_learner1D.rst  adaptive.learner.balancing_learner.md  adaptive.learner.balancing_learner.rst  adaptive.learner.base_learner.md  adaptive.learner.base_learner.rst  adaptive.learner.data_saver.md  adaptive.learner.data_saver.rst  adaptive.learner.integrator_learner.md  adaptive.learner.integrator_learner.rst  adaptive.learner.learner1D.md  adaptive.learner.learner1D.rst  adaptive.learner.learner2D.md  adaptive.learner.learner2D.rst  adaptive.learner.learnerND.md  adaptive.learner.learnerND.rst  adaptive.learner.sequence_learner.md  adaptive.learner.sequence_learner.rst  adaptive.learner.skopt_learner.md  adaptive.learner.skopt_learner.rst  adaptive.learner.triangulation.md  adaptive.learner.triangulation.rst  adaptive.learner.triangulation_backend.md  adaptive.md  adaptive.notebook_integration.md  adaptive.notebook_integration.rst  adaptive.rst  adaptive.runner.AsyncRunner.md  adaptive.runner.AsyncRunner.rst  adaptive.runner.BaseRunner.md  adaptive.runner.BaseRunner.rst  adaptive.runner.BlockingRunner.md  adaptive.runner.BlockingRunner.rst  adaptive.runner.Runner.md  adaptive.runner.Runner.rst  adaptive.runner.extras.md  adaptive.runner.extras.rst  (+2 more)
docs/source/tutorial/: tutorial.AverageLearner.md  tutorial.AverageLearner.rst  tutorial.AverageLearner1D.md  tutorial.AverageLearner1D.rst  tutorial.AverageLearners.rst  tutorial.BalancingLearner.md  tutorial.BalancingLearner.rst  tutorial.DataSaver.md  tutorial.DataSaver.rst  tutorial.IntegratorLearner.md  tutorial.IntegratorLearner.rst  tutorial.Learner1D.md  tutorial.Learner1D.rst  tutorial.Learner2D.md  tutorial.Learner2D.rst  tutorial.LearnerND.md  tutorial.LearnerND.rst  tutorial.SKOptLearner.md  tutorial.SKOptLearner.rst  tutorial.SequenceLearner.md  tutorial.SequenceLearner.rst  tutorial.advanced-topics.md  tutorial.advanced-topics.rst  tutorial.custom_loss.md  tutorial.custom_loss.rst  tutorial.md  tutorial.parallelism.md  tutorial.parallelism.rst  tutorial.rst
learner/: triangulation.c
src/: geometry.rs  lib.rs  triangulation.rs
