[package]
name = "adaptive-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "adaptive_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
numpy = "0.22"
nalgebra = "0.33"
rayon = "1.10"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
